--- a/imageComp/client/main.html
+++ b/imageComp/client/main.html
@@ -1,12 +1,12 @@
 <head>
-  <title>imageComp</title>
+  <title>Image Comparison</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1 >Welcome To Image Comparison!</h1>
 
-  {{> hello}}
-  {{> info}}
+  <!-- {{> hello}} -->
+<!--  {{> info}} -->
 </body>
 
 <template name="hello">
@@ -14,7 +14,7 @@
   <p>You've pressed the button {{counter}} times.</p>
 </template>
 
-<template name="info">
+<!-- <template name="info">
   <h2>Learn Meteor!</h2>
   <ul>
     <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
@@ -22,4 +22,4 @@
     <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
-</template>
+</template> -->
