--- a/imageComp/imports/ui/body.html
+++ b/imageComp/imports/ui/body.html
@@ -1,5 +1,7 @@
-<body>
 
+<!-- template for the main page selections -->
+<template name="Selections">
+<body>
   <div class="container">
 
     <header>
@@ -15,18 +17,18 @@
     </ul>
 
   </div>
-
 </body>
+</template>
 
  <!-- not implimented yet! -->
 <template name="choice1">
-  <button>Side by Side Comparison</button>
+  <button class="buttonContainer1">Side by Side Comparison</button>
 </template>
 
 <template name="choice2">
-  <button>Image Folder Analysis</button>
+  <button class="buttonContainer1">Image Folder Analysis</button>
 </template>
 
 <template name="choice3">
-  <button>Web Link</button>
+  <button class="buttonContainer1">Web Link</button>
 </template>
